@@ -147,6 +147,7 @@
     "print_statement"
     "print_syntax"
     "print_tcset"
+    "print_term_bindings"
     "print_theorems"
     "print_theory"
     "print_trans_rules"
@@ -316,6 +317,7 @@
     "print_statement"
     "print_syntax"
     "print_tcset"
+    "print_term_bindings"
     "print_theorems"
     "print_theory"
     "print_trans_rules"
