@@ -213,6 +213,7 @@
     "print_state"
     "print_statement"
     "print_syntax"
+    "print_term_bindings"
     "print_theorems"
     "print_theory"
     "print_trans_rules"
@@ -445,6 +446,7 @@
     "print_state"
     "print_statement"
     "print_syntax"
+    "print_term_bindings"
     "print_theorems"
     "print_theory"
     "print_trans_rules"
